containers/kubernetes/samples/network-policy/test-np-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-np-default-pod
  namespace: default
spec:
  containers:
    - name: test-np-default-pod
      image: jackjiaibm/ubuntu-toolbox
      imagePullPolicy: Always
      resources:
        requests:
          memory: "64Mi"
          cpu: "10m"
        limits:
          memory: "128Mi"
          cpu: "100m"
      command: ["/bin/sh", "-c"]
      args:
        - sleep 3600
---
apiVersion: v1
kind: Pod
metadata:
  name: test-np-zowe-pod
  namespace: zowe
  labels:
    app.kubernetes.io/name: zowe
    app.kubernetes.io/instance: zowe
    app.kubernetes.io/version: "3.0.0"
    app.kubernetes.io/component: debug
    app.kubernetes.io/part-of: debug
    app.kubernetes.io/managed-by: manual
spec:
  containers:
    - name: test-np-zowe-pod
      image: jackjiaibm/ubuntu-toolbox
      imagePullPolicy: Always
      resources:
        requests:
          memory: "64Mi"
          cpu: "10m"
        limits:
          memory: "128Mi"
          cpu: "100m"
      command: ["/bin/sh", "-c"]
      args:
        - sleep 3600
