containers/kubernetes/samples/network-policy/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: default
spec:
  containers:
    - name: test-pod
      image: jackjiaibm/ubuntu-toolbox
      imagePullPolicy: Always
      resources:
        requests:
          memory: "64Mi"
          cpu: "10m"
        limits:
          memory: "128Mi"
          cpu: "100m"
      command: ["/bin/sh", "-c"]
      args:
        - sleep 3600
